--- a/Components/Pages/Projects/ProjectPage.razor
+++ b/Components/Pages/Projects/ProjectPage.razor
@@ -47,7 +47,7 @@
             {
                 <SfButton CssClass="e-primary" @onclick="openInviteDialog">Invite User</SfButton>
                 <SfButton CssClass="e-primary" @onclick="openCreateNewTask">New Task +</SfButton>
-                <SfButton CssClass="e-warning" @onclick="NavigateToAdminPage">Admin Settings</SfButton>
+                <SfButton CssClass="e-primary" @onclick="NavigateToAdminPage">Admin Settings</SfButton>
             }
         </div>
     </div>
